--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "simplemarket",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hjphopchop.github.io/simpleMarket/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "gh-pages": "^3.2.3",
-    "json-server": "^0.17.0",
     "react": "^18.0.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.0.0",
@@ -25,9 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
